initial changes and app builds

--- a/config/esp32/components/chip/Kconfig
+++ b/config/esp32/components/chip/Kconfig
@@ -634,6 +634,18 @@ menu "CHIP Device Layer"
 
     endmenu
 
+    menu "WiFI PAF option"
+
+        config ENABLE_CHIP_O_WIFI_PAF
+            bool "Enable WiFi PAF for commissioning"
+            default y
+            select ESP_WIFI_NAN_ENABLE
+            select ESP_WIFI_USD_ENABLE
+            help
+                Enable support for commissioning using Wi-Fi Public Action Frame as the transport
+
+    endmenu
+
     menu "BLE Options"
         visible if BT_ENABLED
 
