--- a/config/esp32/components/chip/CMakeLists.txt
+++ b/config/esp32/components/chip/CMakeLists.txt
@@ -331,6 +331,10 @@ if (CONFIG_ICD_MAX_NOTIFICATION_SUBSCRIBERS)
     chip_gn_arg_append("icd_max_notification_subscribers" ${CONFIG_ICD_MAX_NOTIFICATION_SUBSCRIBERS})
 endif()
 
+if (CONFIG_ENABLE_CHIP_O_WIFI_PAF)
+    chip_gn_arg_append("chip_device_config_enable_wifipaf" "true")
+endif()
+
 set(args_gn_input "${CMAKE_CURRENT_BINARY_DIR}/args.gn.in")
 file(GENERATE OUTPUT "${args_gn_input}" CONTENT "${chip_gn_args}")
 
